--- a/style/style.css
+++ b/style/style.css
@@ -123,7 +123,7 @@ main{
 
 .feature-title{
     color:#727272 ;
-    font-size: 2.8rem;
+    font-size: 2.7rem;
     font-weight: 500;
 
 }
@@ -134,4 +134,48 @@ main{
     font-weight: 400;
     margin:24px 0px 32px 0px;
 
+}
+
+
+/* Responsive design */
+/* Design for mobile device */
+
+@media screen and (max-width: 576px) {
+    .header{
+        padding: 10px;
+    }
+    nav,
+    .feature-section{
+        flex-direction: column;
+    }
+
+    .feature-content{
+        padding: 15px;
+    }
+
+    nav > ul{
+        margin-top: 30px;
+    }
+    .img-container{
+        grid-template-columns: 1fr;
+
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:992px){
+    .header{
+        padding: 10px;
+    }
+
+    .feature-section{
+        flex-direction: column;
+    }
+
+    .feature-content{
+        padding: 15px;
+        justify-content: center;
+        text-align: center;
+    }
+
+    
 }
