--- a/style/style.css
+++ b/style/style.css
@@ -160,7 +160,7 @@ main{
 }
 
 .main-feature .card{
-    padding: 30px;
+    padding: 40px;
     border-radius: 8px;
     margin-bottom: 20px;
     background: #FFF;
@@ -175,7 +175,7 @@ main{
 .ten-years-badge{
     border-radius: 8px;
     background: #FF900E;
-    width: 342px;
+    width: 322px;
     padding: 45px 42px;
     text-align: center;
     position: relative;
@@ -196,8 +196,76 @@ main{
 
 }
 
+/* facts style here */
 
+.facts-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+    margin-bottom: 5px;
+}
 
+.facts-description{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+    align-items: center;
+}
+
+.facts-card-container{
+     display: flex;
+     justify-content: space-around;
+     margin-top: 100px;
+
+}
+
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-card-container .card-stats{
+    color:#424242;
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.facts-card-container .card-title{
+    color: #727272;
+    
+    
+}
+
+/* Sponsors style */
+.sponsors-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+    align-items: center;
+    text-align: center;
+    margin-top: 40px;
+
+}
+
+.sponsors-description{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 31px;
+
+}
+
+.sponsors-img-container{
+    display: flex;
+     justify-content: space-around;
+    
+}
 /* Responsive design */
 /* Design for mobile device */
 
@@ -206,12 +274,10 @@ main{
         padding: 10px;
     }
     nav,
-    .feature-section{
+    .feature-section,
+    .main-feature,
+    .facts-card-container{
         flex-direction: column;
-    }
-
-    .feature-content{
-        padding: 15px;
     }
 
     nav > ul{
@@ -221,14 +287,38 @@ main{
         grid-template-columns: 1fr;
 
     }
+
+    .feature-content{
+        padding: 15px;
+    }
+
+    .main-feature-img img{
+        width: 90%;
+        margin-left: 20px;
+    }
+
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+        margin-left: 17px;
+    }
+
+    .facts-card-container .card{
+        margin-bottom: 10px;
+    }
+
+    
 }
+
+/* Responsive for tablet */
 
 @media screen and (min-width:576px) and (max-width:992px){
     .header{
         padding: 10px;
     }
 
-    .feature-section{
+    .feature-section,
+    .main-feature{
         flex-direction: column;
     }
 
@@ -236,6 +326,16 @@ main{
         padding: 15px;
         justify-content: center;
         text-align: center;
+    }
+
+    .main-feature-img img{
+        width: 80%;
+    }
+
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+        margin-left: 300px;
     }
 
     
